--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col">
           <h1>Jugador 1 - <small>0</small></h1>
-          <div id="jugador-cartas"></div>
+          <div id="jugador-cartas" class="divCartas"></div>
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@
       <div class="row mt-2">
         <div class="col">
           <h1>Computadora - <small>0</small></h1>
-          <div id="computadora-cartas"></div>
+          <div id="computadora-cartas" class="divCartas"></div>
         </div>
       </div>
     </div>
