--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <div class="container">
       <div class="row mt-2">
         <div id="divBotones" class="col text-center">
-          <button id="btnNuevo" class="btn btn-danger">Nuevo Juego</button>
-          <button id="btnPedir" class="btn btn-primary">Pedir carta</button>
-          <button id="btnDetener" class="btn btn-primary">Detener</button>
+          <button id="btnNew" class="btn btn-danger">Nuevo Juego</button>
+          <button id="btnRequest" class="btn btn-primary">Pedir carta</button>
+          <button id="btnStop" class="btn btn-primary">Detener</button>
         </div>
       </div>
     </div>
@@ -30,7 +30,7 @@
       <div class="row">
         <div class="col">
           <h1>Jugador 1 - <small>0</small></h1>
-          <div id="jugador-cartas" class="divCartas"></div>
+          <div id="playerCards" class="divCards"></div>
         </div>
       </div>
     </div>
@@ -38,7 +38,7 @@
       <div class="row mt-2">
         <div class="col">
           <h1>Computadora - <small>0</small></h1>
-          <div id="computadora-cartas" class="divCartas"></div>
+          <div id="npcCards" class="divCards"></div>
         </div>
       </div>
     </div>
