feat: change selector and classes words

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Blackjack - Vite</title>
   </head>
   <body>
-    <header class="titulo">Blackjack</header>
+    <header class="title">Blackjack</header>
 
     <div class="container">
       <div class="row mt-2">
